# mandelbrotset-image-generator

./: CMakeLists.txt  README.md  build.ps1
src/: Mandelbrotset.cpp  Mandelbrotset.hpp  Mandelbrotset.hpp.gch  Saves.cpp  Saves.hpp  TileGenerator.hpp  main.cpp
